--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,14 @@ android {
     lintOptions {
         disable "ResourceType"
     }
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "23.0.1"
     defaultConfig {
-        applicationId 'me.kwik.ipm'
+        applicationId 'me.kwik.appsquare'
         minSdkVersion 21
-        targetSdkVersion 24
-        versionCode 21
-        versionName "1.6.64.1d"
+        targetSdkVersion 25
+        versionCode 34
+        versionName "1.7.79.3d"
         multiDexEnabled true
     }
     buildTypes {
@@ -43,17 +43,15 @@ dependencies {
     compile project(':facebook-android-sdk-4.11.0')
     compile files('libs/libphonenumber-6.2.2.jar')
     compile 'org.adw.library:discrete-seekbar:1.0.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.google.android.gms:play-services-places:10.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-analytics:10.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.jakewharton:butterknife:8.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
-    compile "com.andkulikov:transitionseverywhere:1.7.4"
+    compile 'com.andkulikov:transitionseverywhere:1.7.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.3'
 }
